--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  
 -->
  
-<title>bookshelf</title>
+<title>Enstars Cards</title>
 <link rel="shortcut icon" href="{Favicon}">
  
 <!-- scripts - DO NOT TOUCH -->
@@ -373,8 +373,8 @@ h1, h2, h3 {
  
 <div class="info">
 	<!-- the default is your icon. if you want to change it, remove {PortraitURL-128} and replace it with the image url of the one you want. -->
-    <img src="{PortraitURL-128}"/>
-    <div class="t">bookshelf</div><!-- title -->
+    <img src="https://github.com/haremchecker/encard.github.io/blob/main/img/Jun_Sazanami_Work_Unit_Outfit_Chibi.webp"/>
+    <div class="t">Cards</div><!-- title -->
     <div class="l">
 	<!-- these are your header links. feel free to add more. to change the icon, go to https://fontawesome.com/icons. -->
         <a href="/"><i class="fas fa-home"></i>index</a>
@@ -382,11 +382,9 @@ h1, h2, h3 {
         <a href="/"><i class="fas fa-heart"></i>link</a>
         <a href="/"><i class="fas fa-bars"></i>link</a>
     </div>
-    <!-- delete this section if you don't want a description -->
+	 <!-- delete this section if you don't want a description -->
     <div class="d">
-        this page can be used for books, movies, tv shows, fic recs etc. 
-        <br>you can filter by anything you like! 
-        <br>there are instructions to delete this description, which will automatically scroll, if you don't want it.
+<b>LAST UPDATE:</b> May 9
     </div>
     <!-- up to here! -->
 </div>
@@ -416,16 +414,71 @@ it is essential that you do not change any other part, including the 'exclusive'
  
 <div id="sort">
     <ul class="filter option-set exclusive" data-filter-group="group1">
-    <b>category:</b>&nbsp;&nbsp;&nbsp;
+    <b>Idol:</b>&nbsp;&nbsp;&nbsp;
         <li><a href="#" data-filter-value="" class="selected">all</a></li>
-        <li><a href="#" data-filter-value=".filter">filter name</a></li>
-        <li><a href="#" data-filter-value=".filter">filter name</a></li>
+        <li><a href="#" data-filter-value=".eichi">Eichi</a></li>
+        <li><a href="#" data-filter-value=".wataru">Wataru</a></li>
+	<li><a href="#" data-filter-value=".tori">Tori</a></li>
+        <li><a href="#" data-filter-value=".yuzuru">Yuzuru</a></li>
+	<li><a href="#" data-filter-value=".hokuto">Hokuto</a></li>
+        <li><a href="#" data-filter-value=".subaru">Subaru</a></li>
+	<li><a href="#" data-filter-value=".makoto">Makoto</a></li>
+        <li><a href="#" data-filter-value=".mao">Mao</a></li>
+	<li><a href="#" data-filter-value=".tetora">Tetora</a></li>
+        <li><a href="#" data-filter-value=".midori">Midori</a></li>
+	<li><a href="#" data-filter-value=".shinobu">Shinobu</a></li>
+        <li><a href="#" data-filter-value=".chiaki">Chiaki</a></li>
+        <li><a href="#" data-filter-value=".kanata">Kanata</a></li>
+        <li><a href="#" data-filter-value=".hiiro">Hiiro</a></li>
+	<li><a href="#" data-filter-value=".aira">Air</a></li>
+        <li><a href="#" data-filter-value=".mayoi">Mayoi</a></li>
+	<li><a href="#" data-filter-value=".tatsumi">Tatsumi</a></li>
+        <li><a href="#" data-filter-value=".nagisa">Nagisa</a></li>
+	<li><a href="#" data-filter-value=".hiyori">Hiyori</a></li>
+        <li><a href="#" data-filter-value=".ibara">Ibara</a></li>
+	<li><a href="#" data-filter-value=".jun">Jun</a></li>
+        <li><a href="#" data-filter-value=".shu">Shu</a></li>
+	<li><a href="#" data-filter-value=".mika">Mika</a></li>
+        <li><a href="#" data-filter-value=".hinata">Hinata</a></li>
+        <li><a href="#" data-filter-value=".yuuta">Yuuta</a></li>
+        <li><a href="#" data-filter-value=".rinne">Rinne</a></li>
+	<li><a href="#" data-filter-value=".himeru">HiMERU</a></li>
+        <li><a href="#" data-filter-value=".kohaku">Kohaku</a></li>
+	<li><a href="#" data-filter-value=".niki">Niki</a></li>
+        <li><a href="#" data-filter-value=".rei">Rei</a></li>
+	<li><a href="#" data-filter-value=".kaoru">Kaoru</a></li>
+        <li><a href="#" data-filter-value=".koga">Koga</a></li>
+	<li><a href="#" data-filter-value=".adonis">Adonis</a></li>
+        <li><a href="#" data-filter-value=".tomoya">Tomoya</a></li>
+	<li><a href="#" data-filter-value=".nazuna">Nazuna</a></li>
+        <li><a href="#" data-filter-value=".mitsuru">Mitsuru</a></li>
+        <li><a href="#" data-filter-value=".hajime">Hajime</a></li>
+        <li><a href="#" data-filter-value=".keito">Keito</a></li>
+	<li><a href="#" data-filter-value=".kuro">Kuro</a></li>
+        <li><a href="#" data-filter-value=".souma">Souma</a></li>
+	<li><a href="#" data-filter-value=".ibuki">Ibuki</a></li>
+        <li><a href="#" data-filter-value=".tsukasa">Tsukasa</a></li>
+	<li><a href="#" data-filter-value=".leo">Leo</a></li>
+        <li><a href="#" data-filter-value=".izumi">Izumi</a></li>
+	<li><a href="#" data-filter-value=".ritsu">Ritsu</a></li>
+        <li><a href="#" data-filter-value=".arashi">Arashi</a></li>
+	<li><a href="#" data-filter-value=".natsume">Natsume</a></li>
+        <li><a href="#" data-filter-value=".tsumugi">Tsumugi</a></li>
+        <li><a href="#" data-filter-value=".sora">Sora</a></li>
+        <li><a href="#" data-filter-value=".madara">Madara</a></li>
+	<li><a href="#" data-filter-value=".esu">Esu</a></li>
+        <li><a href="#" data-filter-value=".kanna">Kanna</a></li>
+	<li><a href="#" data-filter-value=".fuyume">Fuyume</a></li>
+        <li><a href="#" data-filter-value=".raika">Raika</a></li>
+	
     </ul>
     <ul class="filter option-set" data-filter-group="group2">
-    <b>category:</b>&nbsp;&nbsp;&nbsp;
-        <li><a href="#" data-filter-value="" class="selected">all</a></li>
-        <li><a href="#" data-filter-value=".filter">filter name</a></li>
-        <li><a href="#" data-filter-value=".filter">filter name</a></li>
+    <b>Colour:</b>&nbsp;&nbsp;&nbsp;
+        <li><a href="#" data-filter-value="" class="selected">All</a></li>
+        <li><a href="#" data-filter-value=".green">Green</a></li>
+        <li><a href="#" data-filter-value=".red">Red</a></li>
+	<li><a href="#" data-filter-value=".yellow">Yellow</a></li>
+        <li><a href="#" data-filter-value=".blue">BLue</a></li>
     </ul>
 </div>
  
@@ -439,7 +492,7 @@ it is essential that you do not change any other part, including the 'exclusive'
 template:
 <div class="media">
     <img src=""/>
-    <h1>title</h1>
+    <h1>Level</h1>
     <h2>author</h2>
     <h3><a href="">link</a></h3>
     <div class="overlay">
@@ -467,24 +520,15 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
 -->
  
  
-<div class="media">
-    <img src=""/>
-    <h1>title</h1>
-    <h2>author</h2>
-    <h3><a href="">link</a></h3>
-    <div class="overlay">
-        <div class="desc">desc</div>
-    </div>
+<div class="media jun red">
+    <img src="https://github.com/haremchecker/encard.github.io/blob/main/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp"/>
+    <h1>Level:</h1> 65
 </div>
  
  
 <div class="media">
     <img src=""/>
-    <h1>title</h1>
-    <h2>author</h2>
-    <h3><a href="">link</a></h3>
-    <div class="overlay">
-        <div class="desc">desc</div>
+    <h1>Level:</h1
     </div>
 </div>
  
