--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ h1, h2, h3 {
  
 <div class="info">
 	<!-- the default is your icon. if you want to change it, remove {PortraitURL-128} and replace it with the image url of the one you want. -->
-    <img src="https://encard.github.io/img/Jun_Sazanami_Work_Unit_Outfit_Chibi.webp"/>
+    <img src="https://encard.github.io/img/Jun_Sazanami_Work_Unit_Outfit_Chibi.webp">
     <div class="t">Cards</div><!-- title -->
     <div class="l">
 	<!-- these are your header links. feel free to add more. to change the icon, go to https://fontawesome.com/icons. -->
@@ -521,7 +521,7 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
  
  
 <div class="media jun red">
-    <img src="https://encard.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp"/>
+    <img src="https://encard.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp">
     <h1>Level:</h1> 65
 </div>
  
