--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
  
  
 <div class="media jun red">
-    <img src="https://encard.github.io/img/ (Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp">
+    <img src="https://haremchecker.github.io/img/side/link-click-1-285x399.webp">
     <h1>Level:</h1> 65
 </div>
  
