--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ it is essential that you do not change any other part, including the 'exclusive'
         <li><a href="#" data-filter-value=".green">Green</a></li>
         <li><a href="#" data-filter-value=".red">Red</a></li>
 	<li><a href="#" data-filter-value=".yellow">Yellow</a></li>
-        <li><a href="#" data-filter-value=".blue">BLue</a></li>
+        <li><a href="#" data-filter-value=".blue">Blue</a></li>
     </ul>
 </div>
  
@@ -527,14 +527,14 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
  
  
 <div class="media">
-    <img src=""/>
+    <img src="https://haremchecker.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp">
     <h1>Level:</h1
     </div>
 </div>
  
  
 <div class="media">
-    <img src=""/>
+    <img src="https://encard.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp"/>
     <h1>title</h1>
     <h2>author</h2>
     <h3><a href="">link</a></h3>
