--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
  
  
 <div class="media">
-    <img src="https://encard.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp"/>
+    <img src="https://encard.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed_png.png"/>
     <h1>title</h1>
     <h2>author</h2>
     <h3><a href="">link</a></h3>
