--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
  
  
 <div class="media">
-    <img src=""/>
+    <img src="/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed_png.png"/>
     <h1>title</h1>
     <h2>author</h2>
     <h3><a href="">link</a></h3>
