--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ h1, h2, h3 {
  
 <div class="info">
 	<!-- the default is your icon. if you want to change it, remove {PortraitURL-128} and replace it with the image url of the one you want. -->
-    <img src="img/side/link-click-1-285x399.webp">
+    <img src="https://haremchecker.github.io/encard.github.io/img/Jun_Sazanami_Work_Unit_Outfit_Chibi.webp">
     <div class="t">Cards</div><!-- title -->
     <div class="l">
 	<!-- these are your header links. feel free to add more. to change the icon, go to https://fontawesome.com/icons. -->
@@ -527,25 +527,21 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
  
  
 <div class="media">
-    <img src="https://haremchecker.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp">
     <h1>Level:</h1
     </div>
 </div>
  
  
 <div class="media">
-    <img src="https://encard.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed_png.png"/>
-    <h1>title</h1>
-    <h2>author</h2>
-    <h3><a href="">link</a></h3>
-    <div class="overlay">
-        <div class="desc">desc</div>
+    <img src=""/>
+    <h1>Level</h1>
     </div>
 </div>
  
  
 <div class="media">
-    <img src="https://haremchecker.github.io/img/ec/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp"/>
+    <img src=""/>
     <h1>title</h1>
     <h2>author</h2>
     <h3><a href="">link</a></h3>
