--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@ $(window).load(function () {
 /*-- change all variables here --*/
  
 :root {
-    --background:#fff;
-    --accent:#fafafa;
-    --text:#666;
-    --links:#444;
+    --background:#F5EFFF;
+    --accent:#E5D9F2;
+    --text:#7371FC;
+    --links:#A594F9;
     --links-hover:#bad1e7;
     --title:#222;
     --borders:#eee;
@@ -521,54 +521,231 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
  
  
 <div class="media jun red">
-    <img src="https://haremchecker.github.io/img/side/link-click-1-285x399.webp">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp">
     <h1>Level:</h1> 65
 </div>
  
  
-<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp">
-    <h1>Level:</h1
+<div class="media jun blue">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Wild_Youth)_Jun_Sazanami_M_Bloomed.webp">
+    <h1>Level:</h1> 60
+    </div>
+</div>
+ 
+ 
+<div class="media jun green">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(The_Rebel_Path)_Jun_Sazanami_M_Bloomed.webp">
+    <h1>Level:</h1> 65
+    </div>
+</div>
+ 
+ 
+<div class="media jun red">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(The_Arena_of_Resolve)_Jun_Sazanami_M_Bloomed.webp">
+    <h1>Level:</h1> 65
+    </div>
+</div>
+ 
+ 
+<div class="media jun green">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Sharpened_Gaze)_Jun_Sazanami_M_Bloomed.webp">
+    <h1>Level:</h1> 70
+    </div>
+</div>
+ 
+ 
+<div class="media jun blue">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Rising_Star_Striving_for_Greater_Heights)_Jun_Sazanami_M_Bloomed.webp">
+    <h1>Level:</h1> 60
+    </div>
+</div>
+
+	<div class="media jun yellow">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Break_Through_the_Clouds)_Jun_Sazanami_M_Bloomed.webp">
+    <h1>Level:</h1> 60
+    </div>
+</div>
+ 
+ 
+<div class="media jun yellow">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Determining_Bridegroom_Training)_Jun_Sazanami_M_Bloomed.webp">
+    <h1>Level:</h1> 60
     </div>
 </div>
  
  
 <div class="media">
-    <img src=""/>
-    <h1>Level</h1>
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
     </div>
 </div>
  
  
 <div class="media">
-    <img src=""/>
-    <h1>title</h1>
-    <h2>author</h2>
-    <h3><a href="">link</a></h3>
-    <div class="overlay">
-        <div class="desc">desc</div>
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+
+	<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
     </div>
 </div>
  
  
 <div class="media">
-    <img src=""/>
-    <h1>title</h1>
-    <h2>author</h2>
-    <h3><a href="">link</a></h3>
-    <div class="overlay">
-        <div class="desc">desc</div>
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
     </div>
 </div>
  
  
 <div class="media">
-    <img src=""/>
-    <h1>title</h1>
-    <h2>author</h2>
-    <h3><a href="">link</a></h3>
-    <div class="overlay">
-        <div class="desc">desc</div>
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+
+	<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+
+	<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+
+	<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+
+	<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+
+	<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+    </div>
+</div>
+ 
+ 
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
     </div>
 </div>
  
