--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@ $(window).load(function () {
  
 :root {
     --background:#F5EFFF;
-    --accent:#E5D9F2;
+    --accent:#A594F9;
     --text:#7371FC;
-    --links:#A594F9;
-    --links-hover:#bad1e7;
-    --title:#222;
-    --borders:#eee;
+    --links:#E5D9F2;
+    --links-hover:#BBD0FF;
+    --title:#480355;
+    --borders:#C8B6FF;
     --font-size:10px;
 }
  
@@ -521,58 +521,52 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
  
  
 <div class="media jun red">
-    <img src="https://haremchecker.github.io/encard.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Hunting_Hyena)_Jun_Sazanami_M_Bloomed.webp"/>
     <h1>Level:</h1> 65
 </div>
  
  
 <div class="media jun blue">
-    <img src="https://haremchecker.github.io/encard.github.io/img/(Wild_Youth)_Jun_Sazanami_M_Bloomed.webp">
-    <h1>Level:</h1> 60
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Wild_Youth)_Jun_Sazanami_M_Bloomed.webp"/>
+    <h1>Level:</h1>60
     </div>
 </div>
- 
  
 <div class="media jun green">
-    <img src="https://haremchecker.github.io/encard.github.io/img/(The_Rebel_Path)_Jun_Sazanami_M_Bloomed.webp">
-    <h1>Level:</h1> 65
+    <img src="https://haremchecker.github.io/encard.github.io/img/(The_Rebel_Path)_Jun_Sazanami_M_Bloomed.webp"/>
+    <h1>Level:</h1>65
     </div>
 </div>
- 
  
 <div class="media jun red">
-    <img src="https://haremchecker.github.io/encard.github.io/img/(The_Arena_of_Resolve)_Jun_Sazanami_M_Bloomed.webp">
-    <h1>Level:</h1> 65
+    <img src="https://haremchecker.github.io/encard.github.io/img/(The_Arena_of_Resolve)_Jun_Sazanami_M_Bloomed.webp"/>
+    <h1>Level:</h1>65
     </div>
 </div>
- 
  
 <div class="media jun green">
-    <img src="https://haremchecker.github.io/encard.github.io/img/(Sharpened_Gaze)_Jun_Sazanami_M_Bloomed.webp">
-    <h1>Level:</h1> 70
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Sharpened_Gaze)_Jun_Sazanami_M_Bloomed.webp"/>
+    <h1>Level:</h1>70
     </div>
 </div>
  
- 
 <div class="media jun blue">
-    <img src="https://haremchecker.github.io/encard.github.io/img/(Rising_Star_Striving_for_Greater_Heights)_Jun_Sazanami_M_Bloomed.webp">
-    <h1>Level:</h1> 60
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Rising_Star_Striving_for_Greater_Heights)_Jun_Sazanami_M_Bloomed.webp"/>
+    <h1>Level:</h1>60
     </div>
 </div>
 
-	<div class="media jun yellow">
-    <img src="https://haremchecker.github.io/encard.github.io/img/(Break_Through_the_Clouds)_Jun_Sazanami_M_Bloomed.webp">
-    <h1>Level:</h1> 60
+<div class="media jun yellow">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Break_Through_the_Clouds)_Jun_Sazanami_M_Bloomed.webp"/>
+    <h1>Level:</h1>60
     </div>
 </div>
- 
  
 <div class="media jun yellow">
-    <img src="https://haremchecker.github.io/encard.github.io/img/(Determining_Bridegroom_Training)_Jun_Sazanami_M_Bloomed.webp">
-    <h1>Level:</h1> 60
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Determining_Bridegroom_Training)_Jun_Sazanami_M_Bloomed.webp"/>
+    <h1>Level:</h1>60
     </div>
 </div>
- 
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
