--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ $(window).load(function () {
  
 :root {
     --background:#F5EFFF;
-    --accent:#A594F9;
+    --accent:#E7C6FF;
     --text:#7371FC;
-    --links:#E5D9F2;
+    --links:#9448BC;
     --links-hover:#BBD0FF;
     --title:#480355;
     --borders:#C8B6FF;
@@ -525,23 +525,19 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
     <h1>Level:</h1> 65
 </div>
  
- 
 <div class="media jun blue">
     <img src="https://haremchecker.github.io/encard.github.io/img/(Wild_Youth)_Jun_Sazanami_M_Bloomed.webp"/>
     <h1>Level:</h1>60
-    </div>
 </div>
  
 <div class="media jun green">
     <img src="https://haremchecker.github.io/encard.github.io/img/(The_Rebel_Path)_Jun_Sazanami_M_Bloomed.webp"/>
     <h1>Level:</h1>65
-    </div>
 </div>
  
 <div class="media jun red">
     <img src="https://haremchecker.github.io/encard.github.io/img/(The_Arena_of_Resolve)_Jun_Sazanami_M_Bloomed.webp"/>
     <h1>Level:</h1>65
-    </div>
 </div>
  
 <div class="media jun green">
@@ -553,194 +549,153 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
 <div class="media jun blue">
     <img src="https://haremchecker.github.io/encard.github.io/img/(Rising_Star_Striving_for_Greater_Heights)_Jun_Sazanami_M_Bloomed.webp"/>
     <h1>Level:</h1>60
-    </div>
 </div>
 
 <div class="media jun yellow">
     <img src="https://haremchecker.github.io/encard.github.io/img/(Break_Through_the_Clouds)_Jun_Sazanami_M_Bloomed.webp"/>
     <h1>Level:</h1>60
-    </div>
 </div>
  
 <div class="media jun yellow">
     <img src="https://haremchecker.github.io/encard.github.io/img/(Determining_Bridegroom_Training)_Jun_Sazanami_M_Bloomed.webp"/>
     <h1>Level:</h1>60
-    </div>
 </div>
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
- 
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
 
 	<div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
- 
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
- 
+  
+<div class="media">
+    <img src="https://haremchecker.github.io/encard.github.io/img/">
+    <h1>Level:</h1>
+</div>
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
-</div>
- 
- 
-<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/">
-    <h1>Level:</h1>
-    </div>
 </div>
 
 	<div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
  
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
  
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
  
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
 
 	<div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
  
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
  
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
  
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
 
 	<div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
  
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
- 
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
- 
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
 
 	<div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
- 
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
- 
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
- 
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
 
-	<div class="media">
+<div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
- 
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
- 
  
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
- 
- 
+
 <div class="media">
     <img src="https://haremchecker.github.io/encard.github.io/img/">
     <h1>Level:</h1>
-    </div>
 </div>
  
 </div><!-- end content -->
