--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ $(window).load(function () {
 :root {
     --background:#F5EFFF;
     --accent:#E7C6FF;
-    --text:#7371FC;
+    --text:#3C096C;
     --links:#9448BC;
     --links-hover:#BBD0FF;
     --title:#480355;
@@ -560,57 +560,54 @@ if you do not want an image and overlay, delete these lines from the book/tv/sho
     <h1>Level:</h1>60
 </div>
  
-<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/">
-    <h1>Level:</h1>
+<div class="media ibara blue">
+    <img src="https://haremchecker.github.io/encard.github.io/img/10th_Anniversary_Campaign_Eden_Illustration.webp">
+    <h1>Level:</h1>60
 </div>
  
-<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/">
-    <h1>Level:</h1>
+<div class="media ibara red">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(The_One_with_a_Target)_Ibara_Saegusa_M_Bloomed.webp">
+    <h1>Level:</h1>60
 </div>
 
-	<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/">
-    <h1>Level:</h1>
+	<div class="media ibara blue">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Strategy_Atop_the_Board)_Ibara_Saegusa_M_Bloomed.webp">
+    <h1>Level:</h1>60
 </div>
  
-<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/">
-    <h1>Level:</h1>
+<div class="media ibara yellow">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Perplexing_Tongue)_Ibara_Saegusa_M_Bloomed.webp">
+    <h1>Level:</h1>75
 </div>
   
-<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/">
-    <h1>Level:</h1>
+<div class="media ibara green">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Passing_Time_in_Private)_Ibara_Saegusa_M_Bloomed.webp">
+    <h1>Level:</h1>60
 </div>
  
-<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/">
-    <h1>Level:</h1>
+<div class="media ibara green">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Infinite_Desire)_Ibara_Saegusa_M_Bloomed.webp">
+    <h1>Level:</h1>60
 </div>
 
-	<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/">
-    <h1>Level:</h1>
+	<div class="media ibara yellow">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Frontline_Watchdog)_Ibara_Saegusa_M_Bloomed.webp">
+    <h1>Level:</h1>60
 </div>
  
- 
-<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/">
-    <h1>Level:</h1>
+<div class="media ibara red">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Extra_Undurable_Time)_Ibara_Saegusa_M_Bloomed.webp">
+    <h1>Level:</h1>60
 </div>
  
- 
-<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/">
-    <h1>Level:</h1>
+<div class="media ibara blue">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(Disguised_Commander)_Ibara_Saegusa_M_Bloomed.webp">
+    <h1>Level:</h1>70
 </div>
  
- 
-<div class="media">
-    <img src="https://haremchecker.github.io/encard.github.io/img/">
-    <h1>Level:</h1>
+<div class="media ibara green">
+    <img src="https://haremchecker.github.io/encard.github.io/img/(A_Tempting_Gambit)_Ibara_Saegusa_M_Bloomed.webp">
+    <h1>Level:</h1>65
 </div>
 
 	<div class="media">
